syntax = "proto3";

package proto;

message LoginRequest {
  string Login = 1;
  string Password = 2;
}

message AuthResponse {
  string Token = 1;
}

message SignUpRequest  {
  string Username = 1;
  string Email = 2;
  string Password = 3;
}

message UsernameUsedRequest {
  string Username = 1;
}

message EmailUsedRequest {
  string Email = 1;
}

message UsedResponse {
  bool Used = 1;
}

message AuthUserRequest {
  string Token = 1;
}

message AuthUserResponse {
  string ID = 1;
  string Username = 2;
  string Email = 3;
}

service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc SignUp(SignUpRequest) returns (AuthResponse);
  rpc UsernameUsed(UsernameUsedRequest) returns (UsedResponse);
  rpc EmailUsed(EmailUsedRequest) returns (UsedResponse);
  rpc AuthUser(AuthUserRequest) returns (AuthUserResponse);
}